--- a/LibVds/LibVds.csproj
+++ b/LibVds/LibVds.csproj
@@ -44,7 +44,9 @@
     <Compile Include="Proto\FrameTcp.cs" />
     <Compile Include="Proto\FrameVdS.cs" />
     <Compile Include="Proto\ProtocolId.cs" />
-    <Compile Include="Proto\Session.cs" />
+    <Compile Include="Proto\Server.cs" />
+    <Compile Include="Proto\SessionVdS.cs" />
+    <Compile Include="Proto\Client.cs" />
     <Compile Include="Proto\VdSType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
