IEEE half precision float implementation added.
2 byte float for VDS protocol

--- a/LibVds/LibVds.csproj
+++ b/LibVds/LibVds.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -48,6 +49,8 @@
     <Compile Include="Proto\SessionVdS.cs" />
     <Compile Include="Proto\Client.cs" />
     <Compile Include="Proto\VdSType.cs" />
+    <Compile Include="Utils\Half.cs" />
+    <Compile Include="Utils\HalfHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
