--- a/LibVds/LibVds.csproj
+++ b/LibVds/LibVds.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proto\Apdu\FrameVdS_02.cs" />
     <Compile Include="Proto\InformationId.cs" />
     <Compile Include="Proto\FrameTcp.cs" />
     <Compile Include="Proto\FrameVdS.cs" />
@@ -52,6 +54,7 @@
     <Compile Include="Utils\Half.cs" />
     <Compile Include="Utils\HalfHelper.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
