--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ConsoleTest\packages.config" />
+  <repository path="..\LibVds\packages.config" />
   <repository path="..\LibVdsModbus\packages.config" />
 </repositories>
