--- a/LibVds/LibVds.csproj
+++ b/LibVds/LibVds.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proto\Apdu\FrameVdS_02.cs" />
+    <Compile Include="Proto\Apdu\FrameVdS_03.cs" />
     <Compile Include="Proto\InformationId.cs" />
     <Compile Include="Proto\FrameTcp.cs" />
     <Compile Include="Proto\FrameVdS.cs" />
