--- a/LibVdsModbus/LibVdsModbus.csproj
+++ b/LibVdsModbus/LibVdsModbus.csproj
@@ -53,6 +53,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibVds\LibVds.csproj">
+      <Project>{e98f299e-1169-418b-b64e-08b55ba9df9a}</Project>
+      <Name>LibVds</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
