APDU for frame 51H added (Hersteller-Identifikation)

--- a/LibVds/LibVds.csproj
+++ b/LibVds/LibVds.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Proto\Apdu\FrameVdS_02.cs" />
     <Compile Include="Proto\Apdu\FrameVdS_03.cs" />
     <Compile Include="Proto\Apdu\FrameVdS_30.cs" />
+    <Compile Include="Proto\Apdu\FrameVdS_51.cs" />
     <Compile Include="Proto\Apdu\FrameVds_56.cs" />
     <Compile Include="Proto\InformationId.cs" />
     <Compile Include="Proto\FrameTcp.cs" />
